--- a/wm/ctwm/Makefile
+++ b/wm/ctwm/Makefile
@@ -41,4 +41,5 @@ pre-install:
 .include "../../x11/libXext/buildlink3.mk"
 .include "../../x11/libXmu/buildlink3.mk"
 .include "../../x11/libXpm/buildlink3.mk"
+.include "../../x11/libXt/buildlink3.mk"
 .include "../../mk/bsd.pkg.mk"
