--- a/x11/libXi/Makefile
+++ b/x11/libXi/Makefile
@@ -41,5 +41,6 @@ BUILDLINK_API_DEPENDS.xproto+=		xproto>=7.0.13
 .include "../../x11/libXfixes/buildlink3.mk"
 .include "../../x11/xextproto/buildlink3.mk"
 .include "../../x11/xproto/buildlink3.mk"
+.include "../../x11/libXfixes/buildlink3.mk"
 
 .include "../../mk/bsd.pkg.mk"
