added qt4-libs and xorg-apps

--- a/x11/libXdamage/Makefile
+++ b/x11/libXdamage/Makefile
@@ -20,6 +20,7 @@ PKGCONFIG_OVERRIDE+=	xdamage.pc.in
 .include "../../x11/damageproto/buildlink3.mk"
 .include "../../x11/fixesproto/buildlink3.mk"
 .include "../../x11/libX11/buildlink3.mk"
+.include "../../x11/libXext/buildlink3.mk"
 .include "../../x11/libXfixes/buildlink3.mk"
 .include "../../x11/xextproto/buildlink3.mk"
 .include "../../x11/xproto/buildlink3.mk"
