--- a/x11/beforelight/Makefile
+++ b/x11/beforelight/Makefile
@@ -16,5 +16,6 @@ USE_TOOLS+=		pkg-config
 MAKE_FLAGS+=		appdefaultdir=${PREFIX}/lib/X11/app-defaults
 
 .include "../../x11/libXaw/buildlink3.mk"
+.include "../../x11/libXt/buildlink3.mk"
 .include "../../x11/libXScrnSaver/buildlink3.mk"
 .include "../../mk/bsd.pkg.mk"
