--- a/meta-pkgs/modular-xorg-protos/Makefile
+++ b/meta-pkgs/modular-xorg-protos/Makefile
@@ -36,7 +36,7 @@ DEPENDS+=	videoproto-[0-9]*:../../x11/videoproto
 DEPENDS+=	windowswmproto-[0-9]*:../../wm/windowswmproto
 DEPENDS+=	xcmiscproto-[0-9]*:../../x11/xcmiscproto
 DEPENDS+=	xextproto-[0-9]*:../../x11/xextproto
-DEPENDS+=	xf86driproto-[0-9]*:../../x11/xf86driproto
+#DEPENDS+=	xf86driproto-[0-9]*:../../x11/xf86driproto
 DEPENDS+=	xf86vidmodeproto-[0-9]*:../../x11/xf86vidmodeproto
 DEPENDS+=	xineramaproto-[0-9]*:../../x11/xineramaproto
 DEPENDS+=	xproto-[0-9]*:../../x11/xproto
