--- a/meta-pkgs/modular-xorg-apps/Makefile
+++ b/meta-pkgs/modular-xorg-apps/Makefile
@@ -49,7 +49,7 @@ DEPENDS+=	xfwp-[0-9]*:../../x11/xfwp
 DEPENDS+=	xgamma-[0-9]*:../../x11/xgamma
 DEPENDS+=	xgc-[0-9]*:../../graphics/xgc
 DEPENDS+=	xhost-[0-9]*:../../x11/xhost
-DEPENDS+=	xinit-[0-9]*:../../x11/xinit
+#DEPENDS+=	xinit-[0-9]*:../../x11/xinit
 DEPENDS+=	xkbevd-[0-9]*:../../x11/xkbevd
 DEPENDS+=	xkbprint-[0-9]*:../../x11/xkbprint
 DEPENDS+=	xkbutils-[0-9]*:../../x11/xkbutils
