--- a/lang/clang/Makefile
+++ b/lang/clang/Makefile
@@ -1,17 +1,17 @@
 # $NetBSD: Makefile,v 1.22 2013/07/02 10:33:02 adam Exp $
 
-DISTNAME=	clang-3.3
+DISTNAME=	clang-3.4
 CATEGORIES=	lang
 MASTER_SITES=	http://llvm.org/releases/${PKGVERSION_NOREV}/
 DISTFILES=	llvm-${PKGVERSION_NOREV}.src.tar.gz \
-		cfe-${PKGVERSION_NOREV}.src.tar.gz
+		clang-${PKGVERSION_NOREV}.src.tar.gz
 
 MAINTAINER=	adam.hoka@gmail.com
 HOMEPAGE=	http://llvm.org/
 COMMENT=	Low Level Virtual Machine compiler infrastructure
 LICENSE=	modified-bsd
 
-WRKSRC=			${WRKDIR}/llvm-${PKGVERSION_NOREV}.src
+WRKSRC=			${WRKDIR}/llvm-${PKGVERSION_NOREV}
 
 USE_LANGUAGES=		c c++
 USE_TOOLS+=		chown gmake groff pod2html pod2man
@@ -41,7 +41,7 @@ PLIST_SUBST+=		SOEXT="so"
 CFLAGS.SunOS+=		-mimpure-text
 
 post-extract:
-	mv ${WRKDIR}/cfe-${PKGVERSION_NOREV}.src ${WRKSRC}/tools/clang
+	mv ${WRKDIR}/clang-${PKGVERSION_NOREV} ${WRKSRC}/tools/clang
 .if ${OPSYS} == "SunOS"
 	${ECHO} "int sun_ld_needs_a_symbol=0;" >> ${WRKSRC}/lib/Target/NVPTX/InstPrinter/NVPTXInstPrinter.cpp
 .endif
