--- a/meta-pkgs/xfce4/Makefile.common
+++ b/meta-pkgs/xfce4/Makefile.common
@@ -39,6 +39,7 @@ USE_PKGLOCALEDIR=	yes
 USE_LIBTOOL=		yes
 GNU_CONFIGURE=		yes
 USE_TOOLS+=		gmake pkg-config msgfmt perl intltool
+CONFIGURE_ARGS+=	--disable-visibility
 
 .if ${MACHINE_ARCH} == "alpha"
 GCC_REQD+=		3.0
