--- a/wm/olvwm/Makefile
+++ b/wm/olvwm/Makefile
@@ -1,6 +1,7 @@
 # $NetBSD: Makefile,v 1.20 2012/10/23 10:24:15 wiz Exp $
 #
 
+BROKEN=		Compiler error
 DISTNAME=	olvwm4.src4
 PKGNAME=	olvwm-4.4
 PKGREVISION=	4
