--- a/wm/Makefile
+++ b/wm/Makefile
@@ -20,6 +20,7 @@ SUBDIR+=	blackbox
 SUBDIR+=	blackbox70
 SUBDIR+=	bmpanel2
 SUBDIR+=	bsetroot
+SUBDIR+=	bspwm
 SUBDIR+=	ccsm
 SUBDIR+=	compiz
 SUBDIR+=	compiz-fusion-plugins-extra
@@ -90,6 +91,7 @@ SUBDIR+=	wmctrl
 SUBDIR+=	wmextra
 SUBDIR+=	wmi
 SUBDIR+=	wmii
+SUBDIR+=	wmii-devel
 SUBDIR+=	wmthemes
 SUBDIR+=	wmx
 SUBDIR+=	wmx-gnome
