--- a/devel/gnustep-objc/Makefile
+++ b/devel/gnustep-objc/Makefile
@@ -1,23 +1,29 @@
 # $NetBSD: Makefile,v 1.23 2012/10/31 11:17:02 asau Exp $
 #
 
-DISTNAME=	libobjc2-1.6.1
-PKGNAME=	${DISTNAME:S/libobjc2/gnustep-objc/}
+PKGNAME=	gnustep-objc-1.6.1
 CATEGORIES=	devel gnustep
-MASTER_SITES=	http://download.gna.org/gnustep/
-EXTRACT_SUFX=	.tar.bz2
+GHCOMMIT=	43e81c1bf90036d37ade3f970250bb9da501c1dc
+DISTNAME=	${GHCOMMIT}
+MASTER_SITES=	https://github.com/gnustep/gnustep-libobjc2/archive/
+FETCH_USING=	curl
 
 MAINTAINER=	rh@NetBSD.org
 HOMEPAGE=	https://github.com/gnustep/gnustep-libobjc2
 COMMENT=	Objective-C runtime
 LICENSE=	gnu-gpl-v3
 
-USE_LANGUAGES=			objc
-USE_TOOLS+=			gmake
-MAKE_FILE=			GNUmakefile
-MAKE_ENV+=			ADDITIONAL_LDFLAGS=-lpthread
+WRKSRC=		${WRKDIR}/gnustep-libobjc2-${GHCOMMIT}
+
 GNUSTEP_OVERRIDE_INSTALL=	YES
 NO_CONFIGURE=			YES
+USE_LANGUAGES=			c c++ objc
+NO_MAKE=			YES
+
+do-build:
+	cd ${WRKSRC}; mkdir Build; cd Build; cmake ..; make;
+do-install:
+	cd ${WRKSRC}; cd Build; make install DESTDIR=${DESTDIR};
 
 .include "../../devel/gnustep-make/buildlink3.mk"
 .include "../../mk/pthread.buildlink3.mk"
