added wm/stumpwm from wip

--- a/wm/Makefile
+++ b/wm/Makefile
@@ -73,6 +73,7 @@ SUBDIR+=	sawfish
 SUBDIR+=	selectwm
 SUBDIR+=	skippy
 SUBDIR+=	spectrwm
+SUBDIR+=	stumpwm
 SUBDIR+=	tvtwm
 SUBDIR+=	twm
 SUBDIR+=	uwm
