--- a/x11/clisp-gtk2/Makefile
+++ b/x11/clisp-gtk2/Makefile
@@ -1,6 +1,7 @@
 # $NetBSD: Makefile,v 1.19 2013/09/02 19:51:30 adam Exp $
 #
 
+BROKEN=		ffcall is broken
 CLISP_MODULE=	gtk2
 
 PKGNAME=	clisp-${CLISP_MODULE}-${CLISP_VERSION}
