--- a/graphics/libgnomecanvas/Makefile
+++ b/graphics/libgnomecanvas/Makefile
@@ -28,4 +28,9 @@ BUILDLINK_API_DEPENDS.gtk2=	gtk2+>=2.14.0
 .include "../../devel/pango/buildlink3.mk"
 .include "../../graphics/libart/buildlink3.mk"
 .include "../../x11/gtk2/buildlink3.mk"
+.include "../../x11/libXinerama/buildlink3.mk"
+.include "../../x11/libXrandr/buildlink3.mk"
+.include "../../x11/libXfixes/buildlink3.mk"
+.include "../../x11/libXcomposite/buildlink3.mk"
+.include "../../x11/libXcursor/buildlink3.mk"
 .include "../../mk/bsd.pkg.mk"
