--- a/devel/SDL/Makefile
+++ b/devel/SDL/Makefile
@@ -1,7 +1,7 @@
-# $NetBSD: Makefile,v 1.112 2013/11/25 12:00:47 wiz Exp $
+# $NetBSD: Makefile,v 1.115 2014/06/09 14:18:06 ryoon Exp $
 
 DISTNAME=	SDL-1.2.15
-PKGREVISION=	8
+PKGREVISION=	11
 CATEGORIES=	devel games
 MASTER_SITES=	http://www.libsdl.org/release/
 
