--- a/x11/qt4-mysql/Makefile
+++ b/x11/qt4-mysql/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.35 2013/07/07 18:13:57 adam Exp $
+# $NetBSD: Makefile,v 1.37 2014/07/22 17:01:51 wiz Exp $
 
 .include "../../x11/qt4-libs/Makefile.common"
 
