--- a/audio/pulseaudio/Makefile
+++ b/audio/pulseaudio/Makefile
@@ -1,7 +1,7 @@
-# $NetBSD: Makefile,v 1.81 2013/12/16 11:59:56 asau Exp $
+# $NetBSD: Makefile,v 1.92 2014/08/07 07:43:48 spz Exp $
 
-DISTNAME=	pulseaudio-2.1
-PKGREVISION=	13
+DISTNAME=	pulseaudio-5.0
+PKGREVISION=	2
 CATEGORIES=	audio
 MASTER_SITES=	http://freedesktop.org/software/pulseaudio/releases/
 EXTRACT_SUFX=	.tar.xz
@@ -11,10 +11,14 @@ HOMEPAGE=	http://www.freedesktop.org/wiki/Software/PulseAudio
 COMMENT=	Sound server for POSIX and Win32 systems
 LICENSE=	gnu-lgpl-v2.1 AND gnu-gpl-v2
 
+LIBTOOL_REQD=	2.4
+
 GNU_CONFIGURE=	yes
 USE_LIBTOOL=	yes
-USE_TOOLS+=	gmake gm4 intltool msgfmt pkg-config
+USE_TOOLS+=	aclocal autoheader autoconf automake gmake gm4 intltool msgfmt pkg-config
 USE_LANGUAGES=	c c++
+
+REPLACE_BASH=	shell-completion/pulseaudio-bash-completion.sh
 
 .include "../../mk/bsd.prefs.mk"
 # Some tests are incompatible for NetBSD at least
@@ -26,6 +30,9 @@ CONFIGURE_ARGS+=	--disable-default-build-tests
 CONFIGURE_ENV+=		ac_cv_tls=none
 .endif
 
+CONFIGURE_ENV+=		DATADIRNAME=${PKGLOCALEDIR}
+USE_PKGLOCALEDIR=	yes
+
 # Wrong sys/capability.h assumptions, incompatible implementation:
 .if ${OPSYS} == "FreeBSD"
 CONFIGURE_ARGS+=       --without-caps
@@ -33,6 +40,8 @@ CONFIGURE_ARGS+=       --without-caps
 
 CONFIGURE_ENV+=		EGDIR=${EGDIR}
 MAKE_ENV+=		EGDIR=${EGDIR}
+
+MAKE_FLAGS+=		bashcompletiondir=${PREFIX}/share/bash-completion/completions
 
 CONFIGURE_ARGS+=	--enable-samplerate
 CONFIGURE_ARGS+=	--disable-tcpwrap
@@ -51,9 +60,9 @@ PLIST.evdev=		yes
 .endif
 
 # Find the appropriate SDK
-.if !empty(MACHINE_PLATFORM:MDarwin-10.*)
-CONFIGURE_ARGS+=	--with-mac-sysroot=/Developer/SDKs/MacOSX10.6.sdk
-.endif
+#.if !empty(MACHINE_PLATFORM:MDarwin-10.*)
+CONFIGURE_ARGS+=	--with-mac-sysroot=/Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX10.9.sdk
+#.endif
 
 .include "options.mk"
 
@@ -81,15 +90,17 @@ CONF_FILES+=	${EGDIR}/system.pa ${PKG_SYSCONFDIR}/system.pa
 CONF_FILES+=	${EGDIR}/pulseaudio-system.conf \
 		${PKG_SYSCONFBASE}/dbus-1/system.d/pulseaudio-system.conf
 
-PLIST_VARS+=		evdev hal oss sun
+PLIST_VARS+=		bonjour coreaudio evdev hal oss sun
 
 .if ${OPSYS} == "SunOS"
 PLIST.sun=		yes
 .  if ${OS_VERSION} == "5.11"
-PLIST.hal=		yes
 PLIST.oss=		yes
 .  endif
-.elif ${OPSYS} != "Darwin"
+.elif ${OPSYS} == "Darwin"
+PLIST.bonjour=	yes
+PLIST.coreaudio=	yes
+.else
 PLIST.hal=		yes
 PLIST.oss=		yes
 .endif
@@ -98,6 +109,10 @@ PKG_GROUPS=		${PULSE_GROUP}
 PKG_GROUPS+=		${PULSE_GROUP_REALTIME}
 PKG_GROUPS+=		${PULSE_GROUP_ACCESS}
 PKG_USERS=		${PULSE_USER}:${PULSE_GROUP}
+
+pre-configure:
+	set -e; cd ${WRKSRC}; \
+	aclocal; autoheader; automake -a --foreign -i; autoconf
 
 .if ${OPSYS} != "Darwin"
 .include "../../sysutils/consolekit/buildlink3.mk"
@@ -109,10 +124,8 @@ PKG_USERS=		${PULSE_USER}:${PULSE_GROUP}
 .include "../../devel/glib2/buildlink3.mk"
 .include "../../devel/libltdl/buildlink3.mk"
 .include "../../security/openssl/buildlink3.mk"
-.include "../../security/openssl/buildlink3.mk"
 .include "../../security/policykit/buildlink3.mk"
 .include "../../sysutils/dbus/buildlink3.mk"
-.include "../../sysutils/hal/buildlink3.mk"
 .include "../../textproc/json-c/buildlink3.mk"
 .include "../../mk/oss.buildlink3.mk"
 .include "../../mk/bsd.pkg.mk"
