Add nanomsg{,xx} to the Makefile

--- a/devel/Makefile
+++ b/devel/Makefile
@@ -511,6 +511,8 @@ SUBDIR+=	mph
 SUBDIR+=	mr
 SUBDIR+=	msgpack
 SUBDIR+=	nana
+SUBDIR+=	nanomsg
+SUBDIR+=	nanomsgxx
 SUBDIR+=	nant
 SUBDIR+=	nasm
 SUBDIR+=	nbitools
