Make openexr build on Mac OS X.

--- a/graphics/openexr/Makefile
+++ b/graphics/openexr/Makefile
@@ -3,6 +3,7 @@
 DISTNAME=	openexr-2.1.0
 CATEGORIES=	graphics
 MASTER_SITES=	http://download.savannah.nongnu.org/releases/openexr/
+PKGREVISION=	1
 
 MAINTAINER=	adam@NetBSD.org
 HOMEPAGE=	http://www.openexr.com/
